# Avocado_Price_Prediction

./: .gitignore  Classe 8 - ANN and More Models.ipynb  README.md  pyproject.toml
notebooks/: Avocado_GradientBooster.ipynb  Avocado_MultipleRegression.ipynb  Avocado_PrediccionMLP.ipynb  Avocado_RandomForestReggresor.ipynb  Avocado_cleaning.ipynb  Avocado_price.ipynb  MODEL.ipynb  MODEL2.ipynb  Multiple_regression.ipynb  PrediccionMLP.ipynb
